include/generated/ffi_m.h

status_t BMessage_FindMessenger(const BMessage * self, const char * name, BMessenger * messenger);
status_t BMessage_FindMessenger1(const BMessage * self, const char * name, int32 index, BMessenger * messenger);
status_t BMessage_FindRef(const BMessage * self, const char * name, entry_ref * ref_);
status_t BMessage_FindRef1(const BMessage * self, const char * name, int32 index, entry_ref * ref_);
status_t BMessage_FindNodeRef(const BMessage * self, const char * name, node_ref * ref_);
status_t BMessage_FindNodeRef1(const BMessage * self, const char * name, int32 index, node_ref * ref_);
status_t BMessage_FindMessage(const BMessage * self, const char * name, BMessage * message);
status_t BMessage_FindMessage1(const BMessage * self, const char * name, int32 index, BMessage * message);
status_t BMessage_FindFlat(const BMessage * self, const char * name, BFlattenable * object);
status_t BMessage_FindFlat1(const BMessage * self, const char * name, int32 index, BFlattenable * object);
status_t BMessage_ReplaceAlignment(BMessage * self, const char * name, const BAlignment * alignment);
status_t BMessage_ReplaceAlignment1(BMessage * self, const char * name, int32 index, const BAlignment * alignment);
status_t BMessage_ReplaceRect(BMessage * self, const char * name, BRect* rect);
status_t BMessage_ReplaceRect1(BMessage * self, const char * name, int32 index, BRect* rect);
status_t BMessage_ReplacePoint(BMessage * self, const char * name, BPoint* a_point);
status_t BMessage_ReplacePoint1(BMessage * self, const char * name, int32 index, BPoint* a_point);
status_t BMessage_ReplaceSize(BMessage * self, const char * name, BSize* a_size);
status_t BMessage_ReplaceSize1(BMessage * self, const char * name, int32 index, BSize* a_size);
status_t BMessage_ReplaceString(BMessage * self, const char * name, const char * string);
status_t BMessage_ReplaceString1(BMessage * self, const char * name, int32 index, const char * string);
status_t BMessage_ReplaceString2(BMessage * self, const char * name, const BString * string);
status_t BMessage_ReplaceString3(BMessage * self, const char * name, int32 index, const BString * string);
status_t BMessage_ReplaceInt8(BMessage * self, const char * name, int8 value);
status_t BMessage_ReplaceInt81(BMessage * self, const char * name, int32 index, int8 value);
status_t BMessage_ReplaceUInt8(BMessage * self, const char * name, uint8 value);
status_t BMessage_ReplaceUInt81(BMessage * self, const char * name, int32 index, uint8 value);
status_t BMessage_ReplaceInt16(BMessage * self, const char * name, int16 value);
status_t BMessage_ReplaceInt161(BMessage * self, const char * name, int32 index, int16 value);
status_t BMessage_ReplaceUInt16(BMessage * self, const char * name, uint16 value);
status_t BMessage_ReplaceUInt161(BMessage * self, const char * name, int32 index, uint16 value);
status_t BMessage_ReplaceInt32(BMessage * self, const char * name, int32 value);
status_t BMessage_ReplaceInt321(BMessage * self, const char * name, int32 index, int32 value);
status_t BMessage_ReplaceUInt32(BMessage * self, const char * name, uint32 value);
status_t BMessage_ReplaceUInt321(BMessage * self, const char * name, int32 index, uint32 value);
status_t BMessage_ReplaceInt64(BMessage * self, const char * name, int64 value);
status_t BMessage_ReplaceInt641(BMessage * self, const char * name, int32 index, int64 value);
status_t BMessage_ReplaceUInt64(BMessage * self, const char * name, uint64 value);
status_t BMessage_ReplaceUInt641(BMessage * self, const char * name, int32 index, uint64 value);
status_t BMessage_ReplaceBool(BMessage * self, const char * name, bool a_boolean);
status_t BMessage_ReplaceBool1(BMessage * self, const char * name, int32 index, bool value);
status_t BMessage_ReplaceFloat(BMessage * self, const char * name, float value);
status_t BMessage_ReplaceFloat1(BMessage * self, const char * name, int32 index, float value);
status_t BMessage_ReplaceDouble(BMessage * self, const char * name, double value);
status_t BMessage_ReplaceDouble1(BMessage * self, const char * name, int32 index, double value);
status_t BMessage_ReplacePointer(BMessage * self, const char * name, const void * pointer);
status_t BMessage_ReplacePointer1(BMessage * self, const char * name, int32 index, const void * pointer);
status_t BMessage_ReplaceRef(BMessage * self, const char * name, const entry_ref * ref_);
status_t BMessage_ReplaceRef1(BMessage * self, const char * name, int32 index, const entry_ref * ref_);
status_t BMessage_ReplaceNodeRef(BMessage * self, const char * name, const node_ref * ref_);
status_t BMessage_ReplaceNodeRef1(BMessage * self, const char * name, int32 index, const node_ref * ref_);
status_t BMessage_ReplaceMessage(BMessage * self, const char * name, const BMessage * message);
status_t BMessage_ReplaceMessage1(BMessage * self, const char * name, int32 index, const BMessage * message);
status_t BMessage_ReplaceFlat(BMessage * self, const char * name, BFlattenable * object);
status_t BMessage_ReplaceFlat1(BMessage * self, const char * name, int32 index, BFlattenable * object);
bool BMessage_HasSameData(const BMessage * self, const BMessage * other, bool ignore_field_order, bool deep);
bool BMessage_HasAlignment(const BMessage * self, const char * name, int32 n);
bool BMessage_HasRect(const BMessage * self, const char * name, int32 n);
bool BMessage_HasPoint(const BMessage * self, const char * name, int32 n);
bool BMessage_HasSize(const BMessage * self, const char * name, int32 n);
bool BMessage_HasString(const BMessage * self, const char * name, int32 n);
bool BMessage_HasInt8(const BMessage * self, const char * name, int32 n);
bool BMessage_HasUInt8(const BMessage * self, const char * name, int32 n);
bool BMessage_HasInt16(const BMessage * self, const char * name, int32 n);
bool BMessage_HasUInt16(const BMessage * self, const char * name, int32 n);
bool BMessage_HasInt32(const BMessage * self, const char * name, int32 n);
bool BMessage_HasUInt32(const BMessage * self, const char * name, int32 n);
bool BMessage_HasInt64(const BMessage * self, const char * name, int32 n);
bool BMessage_HasUInt64(const BMessage * self, const char * name, int32 n);
bool BMessage_HasBool(const BMessage * self, const char * name, int32 n);
bool BMessage_HasFloat(const BMessage * self, const char * name, int32 n);
bool BMessage_HasDouble(const BMessage * self, const char * name, int32 n);
bool BMessage_HasColor(const BMessage * self, const char * name, int32 n);
bool BMessage_HasPointer(const BMessage * self, const char * name, int32 n);
bool BMessage_HasMessenger(const BMessage * self, const char * name, int32 n);
bool BMessage_HasRef(const BMessage * self, const char * name, int32 n);
bool BMessage_HasNodeRef(const BMessage * self, const char * name, int32 n);
bool BMessage_HasMessage(const BMessage * self, const char * name, int32 n);
bool BMessage_HasFlat(const BMessage * self, const char * name, const BFlattenable * object);
bool BMessage_HasFlat1(const BMessage * self, const char * name, int32 n, const BFlattenable * object);
BRect *BMessage_FindRect2(const BMessage * self, const char * name, int32 n);
BPoint *BMessage_FindPoint2(const BMessage * self, const char * name, int32 n);
const char *BMessage_FindString4(const BMessage * self, const char * name, int32 n);
int8 BMessage_FindInt82(const BMessage * self, const char * name, int32 n);
int16 BMessage_FindInt162(const BMessage * self, const char * name, int32 n);
int64 BMessage_FindInt642(const BMessage * self, const char * name, int32 n);
bool BMessage_FindBool2(const BMessage * self, const char * name, int32 n);
float BMessage_FindFloat2(const BMessage * self, const char * name, int32 n);
double BMessage_FindDouble2(const BMessage * self, const char * name, int32 n);
bool BMessage_GetBool(const BMessage * self, const char * name, bool default_value);
bool BMessage_GetBool1(const BMessage * self, const char * name, int32 index, bool default_value);
int8 BMessage_GetInt8(const BMessage * self, const char * name, int8 default_value);
int8 BMessage_GetInt81(const BMessage * self, const char * name, int32 index, int8 default_value);
uint8 BMessage_GetUInt8(const BMessage * self, const char * name, uint8 default_value);
uint8 BMessage_GetUInt81(const BMessage * self, const char * name, int32 index, uint8 default_value);
int16 BMessage_GetInt16(const BMessage * self, const char * name, int16 default_value);
int16 BMessage_GetInt161(const BMessage * self, const char * name, int32 index, int16 default_value);
uint16 BMessage_GetUInt16(const BMessage * self, const char * name, uint16 default_value);
uint16 BMessage_GetUInt161(const BMessage * self, const char * name, int32 index, uint16 default_value);
int32 BMessage_GetInt32(const BMessage * self, const char * name, int32 default_value);
int32 BMessage_GetInt321(const BMessage * self, const char * name, int32 index, int32 default_value);