src/generated/ffi_m.rs

    pub fn BMessage_FindMessenger(self_: *const c_void, name: *const c_char, messenger: *mut c_void) -> status_t;
    pub fn BMessage_FindMessenger1(self_: *const c_void, name: *const c_char, index: i32, messenger: *mut c_void) -> status_t;
    pub fn BMessage_FindRef(self_: *const c_void, name: *const c_char, ref_: *mut c_void) -> status_t;
    pub fn BMessage_FindRef1(self_: *const c_void, name: *const c_char, index: i32, ref_: *mut c_void) -> status_t;
    pub fn BMessage_FindNodeRef(self_: *const c_void, name: *const c_char, ref_: *mut c_void) -> status_t;
    pub fn BMessage_FindNodeRef1(self_: *const c_void, name: *const c_char, index: i32, ref_: *mut c_void) -> status_t;
    pub fn BMessage_FindMessage(self_: *const c_void, name: *const c_char, message: *mut c_void) -> status_t;
    pub fn BMessage_FindMessage1(self_: *const c_void, name: *const c_char, index: i32, message: *mut c_void) -> status_t;
    pub fn BMessage_FindFlat(self_: *const c_void, name: *const c_char, object: *mut c_void) -> status_t;
    pub fn BMessage_FindFlat1(self_: *const c_void, name: *const c_char, index: i32, object: *mut c_void) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_FindData(self_: *const c_void, name: *const c_char, type_: type_code, data: *const c_void, num_bytes: *mut c_void) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_FindData1(self_: *const c_void, name: *const c_char, type_: type_code, index: i32, data: *const c_void, num_bytes: *mut c_void) -> status_t;
    pub fn BMessage_ReplaceAlignment(self_: *mut c_void, name: *const c_char, alignment: *const c_void) -> status_t;
    pub fn BMessage_ReplaceAlignment1(self_: *mut c_void, name: *const c_char, index: i32, alignment: *const c_void) -> status_t;
    pub fn BMessage_ReplaceRect(self_: *mut c_void, name: *const c_char, rect: *mut c_void) -> status_t;
    pub fn BMessage_ReplaceRect1(self_: *mut c_void, name: *const c_char, index: i32, rect: *mut c_void) -> status_t;
    pub fn BMessage_ReplacePoint(self_: *mut c_void, name: *const c_char, a_point: *mut c_void) -> status_t;
    pub fn BMessage_ReplacePoint1(self_: *mut c_void, name: *const c_char, index: i32, a_point: *mut c_void) -> status_t;
    pub fn BMessage_ReplaceSize(self_: *mut c_void, name: *const c_char, a_size: *mut c_void) -> status_t;
    pub fn BMessage_ReplaceSize1(self_: *mut c_void, name: *const c_char, index: i32, a_size: *mut c_void) -> status_t;
    pub fn BMessage_ReplaceString(self_: *mut c_void, name: *const c_char, string: *const c_char) -> status_t;
    pub fn BMessage_ReplaceString1(self_: *mut c_void, name: *const c_char, index: i32, string: *const c_char) -> status_t;
    pub fn BMessage_ReplaceString2(self_: *mut c_void, name: *const c_char, string: *const c_void) -> status_t;
    pub fn BMessage_ReplaceString3(self_: *mut c_void, name: *const c_char, index: i32, string: *const c_void) -> status_t;
    pub fn BMessage_ReplaceInt8(self_: *mut c_void, name: *const c_char, value: i8) -> status_t;
    pub fn BMessage_ReplaceInt81(self_: *mut c_void, name: *const c_char, index: i32, value: i8) -> status_t;
    pub fn BMessage_ReplaceUInt8(self_: *mut c_void, name: *const c_char, value: u8) -> status_t;
    pub fn BMessage_ReplaceUInt81(self_: *mut c_void, name: *const c_char, index: i32, value: u8) -> status_t;
    pub fn BMessage_ReplaceInt16(self_: *mut c_void, name: *const c_char, value: i16) -> status_t;
    pub fn BMessage_ReplaceInt161(self_: *mut c_void, name: *const c_char, index: i32, value: i16) -> status_t;
    pub fn BMessage_ReplaceUInt16(self_: *mut c_void, name: *const c_char, value: u16) -> status_t;
    pub fn BMessage_ReplaceUInt161(self_: *mut c_void, name: *const c_char, index: i32, value: u16) -> status_t;
    pub fn BMessage_ReplaceInt32(self_: *mut c_void, name: *const c_char, value: i32) -> status_t;
    pub fn BMessage_ReplaceInt321(self_: *mut c_void, name: *const c_char, index: i32, value: i32) -> status_t;
    pub fn BMessage_ReplaceUInt32(self_: *mut c_void, name: *const c_char, value: u32) -> status_t;
    pub fn BMessage_ReplaceUInt321(self_: *mut c_void, name: *const c_char, index: i32, value: u32) -> status_t;
    pub fn BMessage_ReplaceInt64(self_: *mut c_void, name: *const c_char, value: i64) -> status_t;
    pub fn BMessage_ReplaceInt641(self_: *mut c_void, name: *const c_char, index: i32, value: i64) -> status_t;
    pub fn BMessage_ReplaceUInt64(self_: *mut c_void, name: *const c_char, value: u64) -> status_t;
    pub fn BMessage_ReplaceUInt641(self_: *mut c_void, name: *const c_char, index: i32, value: u64) -> status_t;
    pub fn BMessage_ReplaceBool(self_: *mut c_void, name: *const c_char, a_boolean: bool) -> status_t;
    pub fn BMessage_ReplaceBool1(self_: *mut c_void, name: *const c_char, index: i32, value: bool) -> status_t;
    pub fn BMessage_ReplaceFloat(self_: *mut c_void, name: *const c_char, value: c_float) -> status_t;
    pub fn BMessage_ReplaceFloat1(self_: *mut c_void, name: *const c_char, index: i32, value: c_float) -> status_t;
    pub fn BMessage_ReplaceDouble(self_: *mut c_void, name: *const c_char, value: c_double) -> status_t;
    pub fn BMessage_ReplaceDouble1(self_: *mut c_void, name: *const c_char, index: i32, value: c_double) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_ReplaceColor(self_: *mut c_void, name: *const c_char, value: rgb_color) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_ReplaceColor1(self_: *mut c_void, name: *const c_char, index: i32, value: rgb_color) -> status_t;
    pub fn BMessage_ReplacePointer(self_: *mut c_void, name: *const c_char, pointer: *const c_void) -> status_t;
    pub fn BMessage_ReplacePointer1(self_: *mut c_void, name: *const c_char, index: i32, pointer: *const c_void) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_ReplaceMessenger(self_: *mut c_void, name: *const c_char, messenger: BMessenger) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_ReplaceMessenger1(self_: *mut c_void, name: *const c_char, index: i32, messenger: BMessenger) -> status_t;
    pub fn BMessage_ReplaceRef(self_: *mut c_void, name: *const c_char, ref_: *const c_void) -> status_t;
    pub fn BMessage_ReplaceRef1(self_: *mut c_void, name: *const c_char, index: i32, ref_: *const c_void) -> status_t;
    pub fn BMessage_ReplaceNodeRef(self_: *mut c_void, name: *const c_char, ref_: *const c_void) -> status_t;
    pub fn BMessage_ReplaceNodeRef1(self_: *mut c_void, name: *const c_char, index: i32, ref_: *const c_void) -> status_t;
    pub fn BMessage_ReplaceMessage(self_: *mut c_void, name: *const c_char, message: *const c_void) -> status_t;
    pub fn BMessage_ReplaceMessage1(self_: *mut c_void, name: *const c_char, index: i32, message: *const c_void) -> status_t;
    pub fn BMessage_ReplaceFlat(self_: *mut c_void, name: *const c_char, object: *mut c_void) -> status_t;
    pub fn BMessage_ReplaceFlat1(self_: *mut c_void, name: *const c_char, index: i32, object: *mut c_void) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_ReplaceData(self_: *mut c_void, name: *const c_char, type_: type_code, data: *const c_void, num_bytes: ssize_t) -> status_t;
    // NOT_SUPPORTED: pub fn BMessage_ReplaceData1(self_: *mut c_void, name: *const c_char, type_: type_code, index: i32, data: *const c_void, num_bytes: ssize_t) -> status_t;
    pub fn BMessage_HasSameData(self_: *const c_void, other: *const c_void, ignore_field_order: bool, deep: bool) -> bool;
    pub fn BMessage_HasAlignment(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasRect(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasPoint(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasSize(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasString(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasInt8(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasUInt8(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasInt16(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasUInt16(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasInt32(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasUInt32(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasInt64(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasUInt64(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasBool(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasFloat(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasDouble(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasColor(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasPointer(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasMessenger(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasRef(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasNodeRef(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasMessage(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_HasFlat(self_: *const c_void, name: *const c_char, object: *const c_void) -> bool;
    pub fn BMessage_HasFlat1(self_: *const c_void, name: *const c_char, n: i32, object: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn BMessage_HasData(self_: *const c_void, name: *const c_char, None: type_code, n: i32) -> bool;
    pub fn BMessage_FindRect2(self_: *const c_void, name: *const c_char, n: i32) -> *mut c_void;
    pub fn BMessage_FindPoint2(self_: *const c_void, name: *const c_char, n: i32) -> *mut c_void;
    pub fn BMessage_FindString4(self_: *const c_void, name: *const c_char, n: i32) -> *const c_char;
    pub fn BMessage_FindInt82(self_: *const c_void, name: *const c_char, n: i32) -> i8;
    pub fn BMessage_FindInt162(self_: *const c_void, name: *const c_char, n: i32) -> i16;
    // BLOCKED: pub fn BMessage_FindInt322(self_: *const c_void, name: *const c_char, n: i32) -> i32;
    pub fn BMessage_FindInt642(self_: *const c_void, name: *const c_char, n: i32) -> i64;
    pub fn BMessage_FindBool2(self_: *const c_void, name: *const c_char, n: i32) -> bool;
    pub fn BMessage_FindFloat2(self_: *const c_void, name: *const c_char, n: i32) -> c_float;
    pub fn BMessage_FindDouble2(self_: *const c_void, name: *const c_char, n: i32) -> c_double;
    pub fn BMessage_GetBool(self_: *const c_void, name: *const c_char, default_value: bool) -> bool;
    pub fn BMessage_GetBool1(self_: *const c_void, name: *const c_char, index: i32, default_value: bool) -> bool;
    pub fn BMessage_GetInt8(self_: *const c_void, name: *const c_char, default_value: i8) -> i8;
    pub fn BMessage_GetInt81(self_: *const c_void, name: *const c_char, index: i32, default_value: i8) -> i8;
    pub fn BMessage_GetUInt8(self_: *const c_void, name: *const c_char, default_value: u8) -> u8;
    pub fn BMessage_GetUInt81(self_: *const c_void, name: *const c_char, index: i32, default_value: u8) -> u8;
    pub fn BMessage_GetInt16(self_: *const c_void, name: *const c_char, default_value: i16) -> i16;
    pub fn BMessage_GetInt161(self_: *const c_void, name: *const c_char, index: i32, default_value: i16) -> i16;
    pub fn BMessage_GetUInt16(self_: *const c_void, name: *const c_char, default_value: u16) -> u16;
    pub fn BMessage_GetUInt161(self_: *const c_void, name: *const c_char, index: i32, default_value: u16) -> u16;
    pub fn BMessage_GetInt32(self_: *const c_void, name: *const c_char, default_value: i32) -> i32;
    pub fn BMessage_GetInt321(self_: *const c_void, name: *const c_char, index: i32, default_value: i32) -> i32;
